deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxtest
  labels:
    app: nginxtest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxtest
  template:
    metadata:
      labels:
        app: nginxtest
    spec:
      containers:
      - name: nginxtest
        image: nginx:1.14.2
        ports:
        - containerPort: 80
