registryservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: registryservice
spec:
  selector:
    app: dockerregistry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
