service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxcicd
spec:
  selector:
    app: nginxtest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
