registryingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dockerregistry.stijnbaltessen.digital
    http:
      paths:
      - path: /*
        backend:
          serviceName: registryservice
          servicePort: 5000
